--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16' # Usa la versione di Node.js compatibile con Angular
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
