--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,10 @@ jobs:
         run: npm install
 
       - name: Build project
-        run: npm run build --prod
+        run: npm run build:prod
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages # Branch su cui fare il deploy
-          folder: dist/bogan/browser      # Cartella generata dalla build
+          branch: gh-pages
+          folder: bogan/dist/browser
